--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,14 @@
   "homepage": "https://github.com/JasperCheung/TTPGroupBack#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
-    "requirejs": "^2.3.6"
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1",
+    "pgtools": "^0.3.0",
+    "requirejs": "^2.3.6",
+    "sequelize": "^5.8.9"
   }
 }
