--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
     "pgtools": "^0.3.0",
     "requirejs": "^2.3.6",
     "sequelize": "^5.8.9"
